--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="row mx-5 my-4">
       <div id="controls" class="mx-auto">
         <ul class="nav nav-tabs">
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Active</a>
           </li>
           <li class="nav-item">
@@ -30,21 +30,21 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="#">Active</a>
-          </li>
+          </li> -->
         </ul>
-        <label for="customRange1" class="form-label">Example range</label>
+        <!-- <label for="customRange1" class="form-label">Example range</label>
         <input type="range" class="form-range" id="customRange1">
         <label for="customRange1" class="form-label">Example range</label>
         <input type="range" class="form-range" id="customRange1">
         <label for="customRange1" class="form-label">Example range</label>
-        <input type="range" class="form-range" id="customRange1">
+        <input type="range" class="form-range" id="customRange1"> -->
       </div>
     </div>
     <!-- images -->
-    <div class="row mb-5 position-relative">
-      <img src="./images/electricalMain.png" alt="temp" class="img-fluid position-relative">
+    <div id="imgContainer" class="row mb-5 position-relative">
+      <!-- <img src="./images/electricalMain.png" alt="temp" class="img-fluid position-relative">
       <img src="./images/electricalMain.png" alt="temp" class="img-fluid position-absolute top-0 start-0">
-      <img src="./images/electricalMain.png" alt="temp" class="img-fluid position-absolute top-0 start-0">
+      <img src="./images/electricalMain.png" alt="temp" class="img-fluid position-absolute top-0 start-0"> -->
     </div>
   </div>
 
