--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   </script>
-  <title>image overlap</title>
+  <title>Image projector</title>
   <style>
     #controls {
       max-width: 500px;
@@ -21,30 +21,12 @@
     <!-- opacity controls -->
     <div class="row mx-5 my-4">
       <div id="controls" class="mx-auto">
-        <ul class="nav nav-tabs">
-          <!-- <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Active</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Active</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Active</a>
-          </li> -->
+        <ul class="nav nav-tabs mb-4">
         </ul>
-        <!-- <label for="customRange1" class="form-label">Example range</label>
-        <input type="range" class="form-range" id="customRange1">
-        <label for="customRange1" class="form-label">Example range</label>
-        <input type="range" class="form-range" id="customRange1">
-        <label for="customRange1" class="form-label">Example range</label>
-        <input type="range" class="form-range" id="customRange1"> -->
       </div>
     </div>
     <!-- images -->
     <div id="imgContainer" class="row mb-5 position-relative">
-      <!-- <img src="./images/electricalMain.png" alt="temp" class="img-fluid position-relative">
-      <img src="./images/electricalMain.png" alt="temp" class="img-fluid position-absolute top-0 start-0">
-      <img src="./images/electricalMain.png" alt="temp" class="img-fluid position-absolute top-0 start-0"> -->
     </div>
   </div>
 
