fixed issue with ipad and added new rtu image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       </div>
     </div>
     <!-- images -->
-    <div id="imgContainer" class="row mb-5 position-relative">
+    <div class="row mb-5 position-relative">
+      <div id="imgContainer" class="col">
+      </div>
     </div>
   </div>
 
