--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
   <div class="container">
     <!-- opacity controls -->
     <div class="row mx-5 my-4">
-      <div id="controls" class="mx-auto">
-        <ul class="nav nav-tabs mb-4">
-        </ul>
+      <div class="col">
+        <div id="controls" class="mx-auto">
+          <ul class="nav nav-tabs mb-4">
+          </ul>
+        </div>
       </div>
     </div>
     <!-- images -->
-    <div class="row mb-5 position-relative">
-      <div id="imgContainer" class="col">
+    <div class="row mx-2 mb-5">
+      <div id="imgContainer" class="col position-relative m-0 p-0">
       </div>
     </div>
   </div>
